<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="inventory"
            type="me.roneythomas.inventoryapp.Inventory"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <include
            android:id="@+id/included_name_edit"
            layout="@layout/name_edit_text"
            app:inventory="@{inventory}"/>

        <include
            android:id="@+id/included_quantity_price"
            layout="@layout/quantity_price"
            app:inventory="@{inventory}"/>

        <include
            android:id="@+id/included_sale_button"
            layout="@layout/sale_button"/>

        <Button
            android:id="@+id/receiving_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiving_button"/>

        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_button"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"/>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

    </LinearLayout>
</layout>